--- a/docusaurus/docs/intro.mdx
+++ b/docusaurus/docs/intro.mdx
@@ -3,8 +3,9 @@ sidebar_position: 1
 title: Tutorial Intro
 slug: intro
 ---
-
 # Tutorial Intro
+
+<Highlight color="#25c2a0">Docusaurus green</Highlight>
 
 Let's discover **Docusaurus in less than 5 minutes**.
 
@@ -16,8 +17,9 @@ Or **try Docusaurus immediately** with **[docusaurus.new](https://docusaurus.new
 
 ### What you'll need
 
-- [Node.js](https://nodejs.org/en/download/) version 18.0 or above:
-  - When installing Node.js, you are recommended to check all checkboxes related to dependencies.
+* [Node.js](https://nodejs.org/en/download/) version 18.0 or above:
+
+  * When installing Node.js, you are recommended to check all checkboxes related to dependencies.
 
 ## Generate a new site
 
