test hebrew block working

--- a/docusaurus/docs/intro.mdx
+++ b/docusaurus/docs/intro.mdx
@@ -5,7 +5,7 @@ slug: intro
 ---
 # Tutorial Intro
 
-<Highlight color="#25c2a0">Docusaurus green</Highlight>
+<HebrewBlock>כקשב</HebrewBlock>
 
 Let's discover **Docusaurus in less than 5 minutes**.
 
