Update Tutorial - Grammar “nouns”

--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -1,10 +1,23 @@
 ---
 sidebar_position: 1
 title: Nouns
+slug: nouns
 ---
 # Nouns
 
 <HebrewBlock>מִגְדָּר רָחָב/ מגדרחב</HebrewBlock>
 
 ## Noun Endings
-singular <HebrewBlock>תַלְמִידֶה</HebrewBlock>
+
+singular <HebrewBlock>תַלְמִידֶה</HebrewBlock> *talmideh*
+
+
+
+plural <HebrewBlock>
+תַלְמִידִימוֹת</HebrewBlock> *talmidimot*
+
+Alternate plural endings:
+
+talmidin
+
+talmidol
