Update Tutorial - Grammar “pronouns”

--- a/docusaurus/docs/grammar/pronouns.mdx
+++ b/docusaurus/docs/grammar/pronouns.mdx
@@ -1,17 +1,44 @@
 ---
-title: Pronouns
-slug: pronouns
+title: Commonly used words
+slug: common-words
 ---
 
- 2nd person singular <HebrewBlock> 
-אַתֶה
-</HebrewBlock> *ateh*
 
-2nd person plural <HebrewBlock> 
-אַתֶמֵן</HebrewBlock> *atemen*
 
-3rd person singular <HebrewBlock> 
-הֶא</HebrewBlock> *Heh*
+this <HebrewBlock>
+זֶת</HebrewBlock> *zet*
 
-3rd person plural <HebrewBlock>
-הֵמֵן </HebrewBlock> *Hemen*
+which 
+<HebrewBlock>
+אֵיזֶת</HebrewBlock> *eizet*
+
+
+
+
+
+
+
+person 
+<HebrewBlock>
+אישֶה</HebrewBlock> *isheh*
+
+
+
+
+
+people 
+<HebrewBlock>
+אֲנָשִימוֹת</HebrewBlock> *anashimot*
+
+
+
+
+
+child of 
+<HebrewBlock>
+בֶּת</HebrewBlock> *bet*
+
+
+teacher 
+<HebrewBlock>
+מוֹרֶת</HebrewBlock> *moret*
