Update Tutorial - Grammar “test”

--- a/docusaurus/docs/grammar/test.mdx
+++ b/docusaurus/docs/grammar/test.mdx
@@ -1,5 +1,9 @@
 ---
-title: Test
-slug: test
+title: Adjectives
+slug: adjectives
 ---
-Hellow World
+singular <HebrewBlock>
+גְדוֹלֶה</HebrewBlock> *g'doleh*
+
+plural <HebrewBlock>
+גְדוֹלִימוֹת</HebrewBlock> *g'dolimot*
