Update Tutorial - Grammar “construct-chains”

--- a/docusaurus/docs/grammar/construct-chains.mdx
+++ b/docusaurus/docs/grammar/construct-chains.mdx
@@ -4,8 +4,9 @@ slug: construct-chains
 ---
 singular <HebrewBlock>
 
-תַלְמִידֶת הַכִּיתָה</HebrewBlock> *Talmidet hakitah*
+תַלְמִידֶת הַכִּיתָה
 
+</HebrewBlock> *Talmidet hakitah*
 plural <HebrewBlock>
-
-תַלְמִידוֹתֵי הַכִּיתָה</HebrewBlock> *Talmidotei hakitah*
+תַלְמִידוֹתֵי הַכִּיתָה
+</HebrewBlock> *Talmidotei hakitah
