Update Tutorial - Grammar “pronominal-suffixes”

--- a/docusaurus/docs/grammar/pronominal-suffixes.mdx
+++ b/docusaurus/docs/grammar/pronominal-suffixes.mdx
@@ -16,16 +16,16 @@ slug: pronominal-suffixes
 
 
 
-3rd person singular (single subject) <HebrewBlock>
+3rd person singular (single subject) 
 
-ה ֶX </HebrewBlock> -*eh*
+ה ֶX  -*eh*
 
-3rd person plural (single subject) <HebrewBlock>
+3rd person plural (single subject) 
 
-מֵן– </HebrewBlock> -*men*
+מֵן–  -*men*
 
-3rd person singular (plural subject) <HebrewBlock>
+3rd person singular (plural subject) HebrewBlock
 
-יהֶ ֶX </HebrewBlock> *eyheh*
+יהֶ ֶX HebrewBlock *eyheh*
 
-3rd person plural (plural subject) <HebrewBlock>יהֶמֵן–ֵ </HebrewBlock> -*eyhemen*
+3rd person plural (plural subject) HebrewBlockיהֶמֵן–ֵ HebrewBlock -*eyhemen*
