--- a/docusaurus/docs/grammar/construct-chains.mdx
+++ b/docusaurus/docs/grammar/construct-chains.mdx
@@ -2,11 +2,12 @@
 title: Construct Chains
 slug: construct-chains
 ---
-singular <HebrewBlock>
+
+singular HebrewBlock
 
 תַלְמִידֶת הַכִּיתָה
 
-</HebrewBlock> *Talmidet hakitah*
-plural <HebrewBlock>
+HebrewBlock _Talmidet hakitah_
+plural HebrewBlock
 תַלְמִידוֹתֵי הַכִּיתָה
-</HebrewBlock> *Talmidotei hakitah
+HebrewBlock \*Talmidotei hakitah
