--- a/docusaurus/docs/grammar/pronouns-1.mdx
+++ b/docusaurus/docs/grammar/pronouns-1.mdx
@@ -3,23 +3,17 @@ title: Pronouns
 slug: pronouns
 ---
 
+2nd person singular HebrewBlock
+אַתֶהHebrewBlock _ateh_
 
+2nd person plural
+HebrewBlock
+אַתֶמֵןHebrewBlock _atemen_
 
-2nd person singular <HebrewBlock>
-אַתֶה</HebrewBlock> *ateh*
+3rd person singular
+HebrewBlock
+הֶאHebrewBlock _heh_
 
-2nd person plural 
-<HebrewBlock>
-אַתֶמֵן</HebrewBlock> *atemen*
-
-
-
-3rd person singular 
-<HebrewBlock>
-הֶא</HebrewBlock> *heh*
-
-
-
-3rd person plural 
-<HebrewBlock>
-הֵמֵן</HebrewBlock> *hemen*
+3rd person plural
+HebrewBlock
+הֵמֵןHebrewBlock _hemen_
