--- a/docusaurus/docs/grammar/pronouns.mdx
+++ b/docusaurus/docs/grammar/pronouns.mdx
@@ -3,42 +3,25 @@ title: Commonly used words
 slug: common-words
 ---
 
+this
+זֶת _zet_
 
+which
 
-this <HebrewBlock>
-זֶת</HebrewBlock> *zet*
+אֵיזֶת _eizet_
 
-which 
-<HebrewBlock>
-אֵיזֶת</HebrewBlock> *eizet*
+person
 
+אישֶה _isheh_
 
+people
 
+<HebrewBlock>אֲנָשִימוֹת</HebrewBlock> *anashimot*
 
+child of
 
+<HebrewBlock>בֶּת</HebrewBlock> *bet*
 
+teacher
 
-person 
-<HebrewBlock>
-אישֶה</HebrewBlock> *isheh*
-
-
-
-
-
-people 
-<HebrewBlock>
-אֲנָשִימוֹת</HebrewBlock> *anashimot*
-
-
-
-
-
-child of 
-<HebrewBlock>
-בֶּת</HebrewBlock> *bet*
-
-
-teacher 
-<HebrewBlock>
-מוֹרֶת</HebrewBlock> *moret*
+<HebrewBlock>מוֹרֶת</HebrewBlock> *moret*
