Update Tutorial - Grammar “construct-chains”

--- a/docusaurus/docs/grammar/construct-chains.mdx
+++ b/docusaurus/docs/grammar/construct-chains.mdx
@@ -2,12 +2,7 @@
 title: Construct Chains
 slug: construct-chains
 ---
-
-singular HebrewBlock
-
-תַלְמִידֶת הַכִּיתָה
-
-HebrewBlock _Talmidet hakitah_
-plural HebrewBlock
-תַלְמִידוֹתֵי הַכִּיתָה
-HebrewBlock \*Talmidotei hakitah
+| Form| Hebrew example|Translation|
+| ----------- | ----------- |----------- |
+| singular| <HB> תַלְמִידֶת הַכִּיתָה </HB>| Student of the classroom |
+| plural| <HB> תַלְמִידוֹתֵי הַכִּיתָה </HB>| Students of the classroom |
