Update Tutorial - Grammar “nouns”

--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -3,18 +3,11 @@ sidebar_position: 1
 title: Nouns
 slug: nouns
 ---
-# Nouns
+|Form|Hebrew example|Translation|
+|-----|------------|------------|
+|singular| <HB> תַלְמִידֶה </HB>|student|
+|plural| <HB> תַלְמִידִימוֹת </HB>|students|
 
-<HebrewBlock>מִגְדָּר רָחָב/ מגדרחב</HebrewBlock>
-
-## Noun Endings
-
-singular <HebrewBlock>תַלְמִידֶה</HebrewBlock> *talmideh*
-
-
-
-plural <HebrewBlock>
-תַלְמִידִימוֹת</HebrewBlock> *talmidimot*
 
 Alternate plural endings:
 
