Update Tutorial - Grammar “present-tense-verbs”

--- a/docusaurus/docs/grammar/present-tense-verbs.mdx
+++ b/docusaurus/docs/grammar/present-tense-verbs.mdx
@@ -7,27 +7,27 @@ slug: present-tense-verbs
 
 ## Standard verbs
 
-## שלמים
+## <HB> שלמים </HB>
 
 | Form     | Hebrew example | Translation |
 | -------- | -------------- | ----------- |
-| singular | לוֹמֶדֶה       | They learn  |
-| plural   | לוֹמְדִימוֹת   | They learn  |
+| singular | <HB> לוֹמֶדֶה </HB>     | They learn  |
+| plural   |<HB> לוֹמְדִימוֹת </HB>  | They learn  |
 
 ## Verbs that end in heh
 
-## ל’’ה
+## <HB> ל’’ה </HB>
 
 | Form     | Hebrew example | Translation |
 | -------- | -------------- | ----------- |
-| singular | עוֹשֶׂת        | They make   |
-| plural   | עוֹשִׂימוֹת    | They make   |
+| singular |<HB> עוֹשֶׂת </HB>       | They make   |
+| plural   |<HB> עוֹשִׂימוֹת </HB>   | They make   |
 
 ## Verbs with an ayin as the middle letter of the root
 
-## ע’’ו/ע’’י
+## <HB> ע’’ו/ע’’י </HB>
 
 | Form     | Hebrew example | Translation |
 | -------- | -------------- | ----------- |
-| singular | קָמֶה          | They rise   |
-| plural   | קָמִימוֹת      | They rise   |
+| singular | <HB> קָמֶה </HB>          | They rise   |
+| plural   | <HB> קָמִימוֹת </HB>     | They rise   |
