Update Tutorial - Grammar “pronominal-suffixes”

--- a/docusaurus/docs/grammar/pronominal-suffixes.mdx
+++ b/docusaurus/docs/grammar/pronominal-suffixes.mdx
@@ -3,29 +3,11 @@ title: Pronominal Suffixes
 slug: pronominal-suffixes
 ---
 
-
-
-2nd person singular 
-<HebrewBlock>ךֶ– 
-</HebrewBlock> *cheh*
-
-
-2nd person plural 
-<HebrewBlock>כֶמֵן– 
-</HebrewBlock> *chemen*
-
-
-
-3rd person singular (single subject) 
-
-ה ֶX  -*eh*
-
-3rd person plural (single subject) 
-
-מֵן–  -*men*
-
-3rd person singular (plural subject) HebrewBlock
-
-יהֶ ֶX HebrewBlock *eyheh*
-
-3rd person plural (plural subject) HebrewBlockיהֶמֵן–ֵ HebrewBlock -*eyhemen*
+|Form|Hebrew Example|Translation|
+|----|-------------|-------------|
+|2nd person singular|<HB> ךֶ– </HB>|your|
+|2nd person plural |<HB> כֶמֵן– </HB>|you all's|
+|3rd person singular (single subject)|<HB>ה ֶX </HB>|their|  
+|3rd person plural (single subject) | <HB> מֵן– </HB>|their|
+|3rd person singular (plural subject)| <HB> יהֶ ֶX </HB>|their|
+|3rd person plural (plural subject) |<HB> יהֶמֵן–ֵ </HB>|their|
