--- a/docusaurus/docs/grammar/pronouns-1.mdx
+++ b/docusaurus/docs/grammar/pronouns-1.mdx
@@ -2,18 +2,9 @@
 title: Pronouns
 slug: pronouns
 ---
-
-2nd person singular HebrewBlock
-אַתֶהHebrewBlock _ateh_
-
-2nd person plural
-HebrewBlock
-אַתֶמֵןHebrewBlock _atemen_
-
-3rd person singular
-HebrewBlock
-הֶאHebrewBlock _heh_
-
-3rd person plural
-HebrewBlock
-הֵמֵןHebrewBlock _hemen_
+|Form|Hebrew example|Translation|
+|----------|----------|--------|
+|2nd person singular| <HB> אַתֶה </HB>| you|
+|2nd person plural| <HB> אַתֶמֵן </HB>| you all|
+|3rd person singular|<HB> הֶא </HB>| they|
+|3rd person plural|<HB> הֵמֵן </HB>|they|
