Update Tutorial - Grammar “pronouns”

--- a/docusaurus/docs/grammar/pronouns.mdx
+++ b/docusaurus/docs/grammar/pronouns.mdx
@@ -2,26 +2,11 @@
 title: Commonly used words
 slug: common-words
 ---
-
-this
-זֶת _zet_
-
-which
-
-אֵיזֶת _eizet_
-
-person
-
-אישֶה _isheh_
-
-people
-
-<HebrewBlock>אֲנָשִימוֹת</HebrewBlock> *anashimot*
-
-child of
-
-<HebrewBlock>בֶּת</HebrewBlock> *bet*
-
-teacher
-
-<HebrewBlock>מוֹרֶת</HebrewBlock> *moret*
+|English|Hebrew|
+|-------|--------|
+|this|<HB> זֶת </HB>|
+|which|<HB> אֵיזֶת </HB>|
+|person|<HB> אישֶה </HB>|
+|people|<HB> אֲנָשִימוֹת </HB>|
+|child of|<HB> בֶּת </HB>|
+|teacher|<HB> מוֹרֶת </HB>|
