Update Tutorial - Grammar “test”

--- a/docusaurus/docs/grammar/test.mdx
+++ b/docusaurus/docs/grammar/test.mdx
@@ -2,8 +2,7 @@
 title: Adjectives
 slug: adjectives
 ---
-singular <HebrewBlock>
-גְדוֹלֶה</HebrewBlock> *g'doleh*
-
-plural <HebrewBlock>
-גְדוֹלִימוֹת</HebrewBlock> *g'dolimot*
+|Form|Hebrew example|Translation|
+|------|----------|-----------|
+|singular| <HB> גְדוֹלֶה </HB>|big|
+|plural|<HB> גְדוֹלִימוֹת </HB>|big|
