Update Tutorial - Grammar “present-tense-verbs”

--- a/docusaurus/docs/grammar/present-tense-verbs.mdx
+++ b/docusaurus/docs/grammar/present-tense-verbs.mdx
@@ -23,7 +23,7 @@ slug: present-tense-verbs
 | singular |<HB> עוֹשֶׂת </HB>       | They make   |
 | plural   |<HB> עוֹשִׂימוֹת </HB>   | They make   |
 
-## Verbs with an ayin as the middle letter of the root
+## Verbs with a yud or vav as the second letter of the root
 
 ## <HB> ע’’ו/ע’’י </HB>
 
