Update Tutorial - Grammar “present-tense-verbs”

--- a/docusaurus/docs/grammar/present-tense-verbs.mdx
+++ b/docusaurus/docs/grammar/present-tense-verbs.mdx
@@ -1,6 +1,6 @@
 ---
-title: Present Tense Verbs
-slug: present-tense-verbs
+title: Verbs in Present Tense
+slug: verbs-present-tense
 ---
 
 ## Present Tense
