Update blog “2025-01-30-modet-ani”

--- a/docusaurus/blog/2025-01-30-modet-ani.md
+++ b/docusaurus/blog/2025-01-30-modet-ani.md
@@ -1,9 +1,23 @@
 ---
-title: Modet Ani
-slug: modet-ani
+title: Birkot HaShachar
+slug: birkot-hashachar
 tags:
   - Shacharit
   - Blessings
 ---
-<HB> מודֶת אֲנִי לְפָנֶיךָ מֶלֶךְ חַי וְקַיָּם, שֶׁהֶחֱזַרְתָּ בִּי נִשְׁמָתִי בְּחֶמְלָה, רַבָּה אֱמוּנָתֶךָ </HB>
-Grateful I am before you, Living and enduring Sovereign, that you have returned to me my soul in compassion, great is your faith in me.
+Morning blessing - substitutions:
+
+ <HB> בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, שֶׁעָשַׂנִי בֶּת חוֹרין </HB>
+
+Baruch Atah Hashem, Elokeinu melech ha-Olam, she-asani bet chorin
+Blessed are You, ETERNAL ONE, Our Divine, Sovereign of the Universe, who has made me a child of freedom
+
+​<HB> בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, שֶׁעָשַׂנִי עִברִי</HB>
+
+Baruch Atah Hashem, Elokeinu melech ha-Olam, she-asani ivri
+
+ Blessed are You, ETERNAL ONE, Our Divine, Sovereign of the Universe, who has made me one who crosses over/liminal
+
+*Using Ivri as the word in Hebrew for a trans person,
+
+according to the suggestions in Balancing on the Mechitza
