--- a/docusaurus/docs/grammar/pronouns.mdx
+++ b/docusaurus/docs/grammar/pronouns.mdx
@@ -1,12 +1,10 @@
 ---
-title: Commonly used words
-slug: common-words
+title: Pronouns
+slug: pronouns
 ---
-|English|Hebrew|
-|-------|--------|
-|this|<HB> זֶת </HB>|
-|which|<HB> אֵיזֶת </HB>|
-|person|<HB> אישֶה </HB>|
-|people|<HB> אֲנָשִימוֹת </HB>|
-|child of|<HB> בֶּת </HB>|
-|teacher|<HB> מוֹרֶת </HB>|
+|Form|Hebrew example|Translation|
+|----------|----------|--------|
+|2nd person singular| <HB> אַתֶה </HB>| you|
+|2nd person plural| <HB> אַתֶמֵן </HB>| you all|
+|3rd person singular|<HB> הֶא </HB>| they|
+|3rd person plural|<HB> הֵמֵן </HB>|they|
