Update Tutorial - Grammar “adjectives”

--- a/docusaurus/docs/grammar/adjectives.mdx
+++ b/docusaurus/docs/grammar/adjectives.mdx
@@ -1,6 +1,7 @@
 ---
 title: Adjectives
 slug: adjectives
+sidebar_position: 2
 ---
 |Form|Hebrew example|Translation|
 |------|----------|-----------|
