--- a/docusaurus/blog/2025-01-30-modet-ani.md
+++ b/docusaurus/blog/2025-01-30-modet-ani.md
@@ -5,9 +5,10 @@ tags:
   - Shacharit
   - Blessings
 ---
+
 Morning blessing - substitutions:
 
- <HB> בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, שֶׁעָשַׂנִי בֶּת חוֹרין </HB>
+<HB> בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, שֶׁעָשַׂנִי בֶּת חוֹרין </HB>
 
 Baruch Atah Hashem, Elokeinu melech ha-Olam, she-asani bet chorin
 Blessed are You, ETERNAL ONE, Our Divine, Sovereign of the Universe, who has made me a child of freedom
@@ -16,8 +17,8 @@ Blessed are You, ETERNAL ONE, Our Divine, Sovereign of the Universe, who has mad
 
 Baruch Atah Hashem, Elokeinu melech ha-Olam, she-asani ivri
 
- Blessed are You, ETERNAL ONE, Our Divine, Sovereign of the Universe, who has made me one who crosses over/liminal
+Blessed are You, ETERNAL ONE, Our Divine, Sovereign of the Universe, who has made me one who crosses over/liminal
 
-*Using Ivri as the word in Hebrew for a trans person,
+\*Using Ivri as the word in Hebrew for a trans person,
 
 according to the suggestions in Balancing on the Mechitza
