Update Applied Uses “2025-01-30-modet-ani”

--- a/docusaurus/blog/2025-01-30-modet-ani.md
+++ b/docusaurus/blog/2025-01-30-modet-ani.md
@@ -2,8 +2,7 @@
 title: Birkot HaShachar
 slug: birkot-hashachar
 tags:
-  - Shacharit
-  - Blessings
+  - Blessings:Shacharit
 ---
 
 Morning blessing - substitutions:
