--- a/docusaurus/blog/2025-02-20-yizkor.md
+++ b/docusaurus/blog/2025-02-20-yizkor.md
@@ -4,6 +4,7 @@ manual_pdf: /uploads/general-manual.pdf
 slug: yizkor
 tags:
   - Blessings:Yizkor
+  - Lifecycle:Yizkor
 ---
 Yizkor Blessings by David E Rendsburg
 
@@ -35,4 +36,13 @@ For other relatives
 עִם נִשְׁמוֹת אַבְרָהָם יִצְחָק וְיַעֲקֹב שָׂרָה רִבְקָה רָחֵל וְלֵאָה
 
 וְעִם שְׁאָר צַדִּיקִים וְצַדְקָנִיּוֹת שֶׁבְּגַן עֵדֶן וְנֹאמַר אָמֵן
+ </HB>
+
+
+Memorial Prayer
+
+<HB> 
+אֵל מָלֵא רַחֲמִים, שׁוֹכֵן בַּמְּרוֹמִים, הַמְצֵא מְנוּחָה נְכוֹנָה, עַל כַּנְפֵי הַשְּׁכִינָה, בְּמַעֲלוֹת קְדוֹשִׁים וּטְהוֹרִים, כְּזוֹהַר הָרָקִיעַ מַזְהִירִים,
+
+אֶת נִשְׁמַת פלוני מבית פלוני שֶׁהָלְכֶה לְעוֹלָמֶהּ, בַּעֲבוּר שֶׁבְּלִי נֶדֶר אֶתֵּן צְדָקָה בְּעַד הַזְכָּרַת הַנְשָׁמָה, בְּגַן עֵדֶן תְּהֵא מְנוּחָה שְׁלֵמָה, לָכֵן בַּעַל הָרַחֲמִים יַסְתִּיר אֶת פלוני מבית פלוני בְּסֵתֶר כְּנָפָיו לְעוֹלָמִים וְיִצְרֹר בִּצְרוֹר הַחַיִּים אֶת הַנְשָׁמָה, יְיָ הוּא נַחֲלָתֶהּ, וְיָנוּחַ בְּשָׁלוֹם עַל מִשְׁכָּבֶהּ, וְנֹאמַר אָמֵן
  </HB>
