fix about us images

--- a/docusaurus/src/pages/about/index.mdx
+++ b/docusaurus/src/pages/about/index.mdx
@@ -16,7 +16,7 @@ Deep gratitude to Tal Klausner, Rabbi Jonah Rank, brin solomon, Rabbi Emily Aviv
 ## Who We Are
 
 <img
-  src="/img/lior.png"
+  src="lior.png"
   alt="lior smiles in snowy woods next to a tree"
   width="255"
   height="274"
@@ -26,7 +26,7 @@ for justice through building critical community connections and fostering divers
 for resilience through education.
 
 <img
-  src="/img/eyal.png"
+  src="eyal.png"
   alt="eyal smiles with autumn leaves in the background"
   width="255"
   height="274"
