--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -9,6 +9,9 @@ tags:
   - Guides
   - Lifecycle:Hevra_Kadisha
 ---
+
 [](/img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf)[Toward A Gender-Inclusive Hevra Kadisha - Keshet Webpage](https://www.keshetonline.org/text-only-toward-a-gender-inclusive-hevra-kadisha/)
 
 [Toward A Gender-Inclusive Hevra Kadisha PDF](/img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf)
+
+{frontMatter.title}
