--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -14,4 +14,8 @@ tags:
 
 [Toward A Gender-Inclusive Hevra Kadisha PDF](/img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf)
 
-{frontMatter.title}
+{frontMatter.applied_use_file}
+
+test2:
+
+{frontMatter.applied_use_file[0]}
