--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -1,7 +1,5 @@
 ---
 title: Toward a Gender-Inclusive Hevra Kadisha
-manual_pdf:
-  - /img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf
 applied_use_file:
   - /img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf
 slug: hevra-kadisha
@@ -17,5 +15,11 @@ tags:
 {frontMatter.applied_use_file}
 
 test2:
+
+<iframe
+  src="https://docs.google.com/gview?url=http://example.com/{frontMatter.applied_use_file[0]}&embedded=true"
+  style="width:100%; height:100%;"
+  frameborder="0"
+></iframe>
 
 {frontMatter.applied_use_file[0]}
