--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -17,7 +17,13 @@ tags:
 test2:
 
 <iframe
-  src="https://docs.google.com/gview?url=http://example.com/{frontMatter.applied_use_file[0]}&embedded=true"
+  src="https://docs.google.com/gview?url=https://nonbinary-hebrew-project.netlify.app/assets/files/toward-a-gender-inclusive-hevra-kadisha-final--dec8017c4eeea8d98772d940a9588b75.pdf&amp;embedded=true"
+  frameborder="0"
+  style="width:100%; height:30rem;"
+></iframe>
+
+<iframe
+  src="https://docs.google.com/gview?url=https://docs.google.com/gview?url=https://nonbinary-hebrew-project.netlify.app/{frontMatter.applied_use_file[0]}&embedded=true"
   style="width:100%; height:100%;"
   frameborder="0"
 ></iframe>
