--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -23,7 +23,7 @@ test2:
 ></iframe>
 
 <iframe
-  src="https://docs.google.com/gview?url=https://docs.google.com/gview?url=https://nonbinary-hebrew-project.netlify.app/{frontMatter.applied_use_file[0]}&embedded=true"
+  src="https://docs.google.com/gview?url=https://nonbinary-hebrew-project.netlify.app/{frontMatter.applied_use_file[0]}&embedded=true"
   style="width:100%; height:100%;"
   frameborder="0"
 ></iframe>
