--- a/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
+++ b/docusaurus/blog/2025-02-18-toward-a-gender-inclusive-hevra-kadisha.mdx
@@ -1,7 +1,6 @@
 ---
 title: Toward a Gender-Inclusive Hevra Kadisha
-applied_use_file:
-  - /img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf
+pdf_file: /img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf
 slug: hevra-kadisha
 tags:
   - Guides
@@ -12,20 +11,4 @@ tags:
 
 [Toward A Gender-Inclusive Hevra Kadisha PDF](/img/toward-a-gender-inclusive-hevra-kadisha-final-.pdf)
 
-{frontMatter.applied_use_file}
-
-test2:
-
-<iframe
-  src="https://docs.google.com/gview?url=https://nonbinary-hebrew-project.netlify.app/assets/files/toward-a-gender-inclusive-hevra-kadisha-final--dec8017c4eeea8d98772d940a9588b75.pdf&amp;embedded=true"
-  frameborder="0"
-  style="width:100%; height:30rem;"
-></iframe>
-
-<iframe
-  src="https://docs.google.com/gview?url=https://nonbinary-hebrew-project.netlify.app/{frontMatter.applied_use_file[0]}&embedded=true"
-  style="width:100%; height:100%;"
-  frameborder="0"
-></iframe>
-
-{frontMatter.applied_use_file[0]}
+<PdfViewer frontMatter={frontMatter} />
