Update Applied Uses “2025-02-22-a-haggadah-of-our-own”

--- a/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
+++ b/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
@@ -8,3 +8,5 @@ slug: haggadah-of-our-own
 
 Other formats and host guide in this dropbox folder:
 https://www.dropbox.com/scl/fo/unoa3fw9q1v9zprgg5y82/ABqO94WEh6S2rcimWCngDnI?rlkey=kv4yxs0f7apc8v0ct2h479fpl&e=1
+
+<PdfViewer frontMatter={frontMatter} />
