--- a/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
+++ b/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
@@ -1,6 +1,8 @@
 ---
 title: A Haggadah Of Our Own
 pdf_file: /img/a-haggadah-of-our-own.pdf
+additional_files:
+  - /img/host-s-guide.pdf
 slug: haggadah-of-our-own
 ---
 "A Haggadah Of Our Own" prepared by Thursday Bram:
@@ -9,4 +11,7 @@ slug: haggadah-of-our-own
 Other formats and host guide in this dropbox folder:
 https://www.dropbox.com/scl/fo/unoa3fw9q1v9zprgg5y82/ABqO94WEh6S2rcimWCngDnI?rlkey=kv4yxs0f7apc8v0ct2h479fpl&e=1
 
+<Files frontMatter={frontMatter} />
+
 <PdfViewer frontMatter={frontMatter} />
+
