Update Applied Uses “2025-02-22-a-haggadah-of-our-own”

--- a/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
+++ b/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
@@ -3,6 +3,9 @@ title: A Haggadah Of Our Own
 pdf_file: /img/a-haggadah-of-our-own.pdf
 additional_files:
   - /img/host-s-guide.pdf
+  - /img/a-haggadah-of-our-own-for-voiceover-.epub
+  - /img/a-haggadah-of-our-own.epub
+  - /img/host-s-guide.epub
 slug: haggadah-of-our-own
 ---
 "A Haggadah Of Our Own" prepared by Thursday Bram:
