--- a/docusaurus/blog/2025-02-18-counting-the-omer.mdx
+++ b/docusaurus/blog/2025-02-18-counting-the-omer.mdx
@@ -1,5 +1,6 @@
 ---
 title: Counting the Omer
+pdf_file: /img/exploring-gender-through-counting-the-omer-keshet.pdf
 slug: counting-the-omer
 tags:
   - Omer
@@ -9,5 +10,4 @@ tags:
 ---
 
 [](/img/exploring-gender-through-counting-the-omer-keshet.pdf)[Exploring Gender Through Counting the Omer - Keshet Webpage](https://www.keshetonline.org/resources/exploring-gender-through-counting-the-omer)
-
-[Exploring Gender Through Counting the Omer PDF](/img/exploring-gender-through-counting-the-omer-keshet.pdf)
+<PdfViewer frontMatter={frontMatter} />
