--- a/docusaurus/blog/2025-02-20-conversion-certificate.mdx
+++ b/docusaurus/blog/2025-02-20-conversion-certificate.mdx
@@ -1,5 +1,6 @@
 ---
 title: Conversion Certificate
+pdf_file: /img/conversion-certificate-nonbinary-convert-they-mibet-nhp-.pdf
 slug: conversion-certificate
 tags:
   - Lifecycle:Conversion
@@ -9,4 +10,4 @@ tags:
 
 [Conversion certificate by R' Jeremy Sher](https://docs.google.com/document/d/1qzw0QH_RGCJ-IW85nkQDZgzN3Xg2d9T0vAZCEc92stE/edit?usp=sharing)
 
-[Conversion certificate by R' Jeremy Sher PDF](/img/conversion-certificate-nonbinary-convert-they-mibet-nhp-.pdf)
+<PdfViewer frontMatter={frontMatter} />
