Update Applied Uses “2025-02-23-soulmate-blessing”

--- a/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
+++ b/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
@@ -5,4 +5,6 @@ slug: soulmate-blessing
 ---
 Check out this beautiful soulmate blessing created by rabbinical student Ariel Zitny!
 
+<HB> בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ  מֶלֶךְ הָעוֹלָם אֲשֶׁר עָשָׂה אֶת יְדִידֶת נַפְשִׁי </HB>
+
 <PdfViewer frontMatter={frontMatter} />
