--- a/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
+++ b/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
@@ -1,10 +1,12 @@
 ---
 title: Soulmate Blessing
-pdf_file: /img/soulmate-blessing.docx
+pdf_file: ""
+additional_files:
+  - /img/soulmate-blessing.docx
 slug: soulmate-blessing
 ---
 Check out this beautiful soulmate blessing created by rabbinical student Ariel Zitny!
 
 <HB> בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ  מֶלֶךְ הָעוֹלָם אֲשֶׁר עָשָׂה אֶת יְדִידֶת נַפְשִׁי </HB>
 
-<PdfViewer frontMatter={frontMatter} />
+<Files frontMatter={frontMatter} />
