Update Applied Uses “2025-02-23-chanukah-blessings”

--- a/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
@@ -1,6 +1,7 @@
 ---
 title: Chanukah Blessings
 slug: chanukah-blessings
+tags: []
 ---
 Chanukah Blessings (conjugated by Kohenet Ahava Lilith EvershYne)
  
