Update Applied Uses “2025-02-20-wedding-blessings”

--- a/docusaurus/blog/2025-02-20-wedding-blessings.mdx
+++ b/docusaurus/blog/2025-02-20-wedding-blessings.mdx
@@ -3,7 +3,9 @@ title: Besărobĭsh (Bessarabian) extensions
 applied_use_file:
   - /img/2020-09-04-nonbinary-hebrew-extensions.pdf
 slug: bessarabian-extensions
+pdf_file: /img/2020-09-04-nonbinary-hebrew-extensions.pdf
 tags: []
 ---
 [Besărobĭsh (Bessarabian) extensions by Binah bas P'ninah (she) PDF](/img/2020-09-04-nonbinary-hebrew-extensions.pdf)
 
+<PdfViewer frontMatter={frontMatter} />
