Update Applied Uses “2025-02-23-yizkor-blessings”

--- a/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
@@ -1,6 +1,9 @@
 ---
 title: Yizkor Blessings
 slug: yizkor-blessings
+tags:
+  - Blessings:Yizkor
+  - Lifecycle:Yizkor
 ---
 Yizkor Blessings from David E Rendsburg
 
