Update Applied Uses “2025-02-23-birkat-kohanimot-priestly-blessing-from-rabbi-lily-solochek”

--- a/docusaurus/blog/2025-02-23-birkat-kohanimot-priestly-blessing-from-rabbi-lily-solochek.mdx
+++ b/docusaurus/blog/2025-02-23-birkat-kohanimot-priestly-blessing-from-rabbi-lily-solochek.mdx
@@ -1,6 +1,9 @@
 ---
-title: Birkat Kohanimot (Priestly Blessing) from Rabbi Lily Solochek
+title: Birkat Kohanimot (Priestly Blessing)
 slug: birkat-kohanimot
+tags:
+  - Blessings:Priestly_Blessing
+  - Amidah
 ---
 "Birkat Kohanimot (Priestly Blessing) for my synagogue (Adas Yoshuron) (It also uses feminine god language)"- from [Rabbi Lily Solochek](https://www.adasyoshuron.org/?page_id=2020)
 
