--- a/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
@@ -1,9 +1,11 @@
 ---
 title: Chanukah Blessings
 slug: chanukah-blessings
-tags: []
+tags:
+  - Blessings:Chanukah
 ---
+
 Chanukah Blessings (conjugated by Kohenet Ahava Lilith EvershYne)
- 
+
 Bruche ateh Shekhinah Elot'heinu Ruach haOlam asher kidshatnu bmitzvoteihe vetzivatnu l'hadlik ner shel Chanukah.
 Bruche ateh Shekhinah Elot'heinu Ruach haOlam, she-asteh nisim l’kodmeinu ba-yamim ha-heimen ba-z’man ha-zeh.
