Update Applied Uses “2025-02-18-calling-someone-up-to-the-torah-aliyah”

--- a/docusaurus/blog/2025-02-18-calling-someone-up-to-the-torah-aliyah.mdx
+++ b/docusaurus/blog/2025-02-18-calling-someone-up-to-the-torah-aliyah.mdx
@@ -6,7 +6,6 @@ tags:
   - Shacharit
 ---
 
-<HB>
-(בֶּת כּוֹהֵן קְרָבֶה), יַעָמְדֶה (שם) בֶּת (שם מישפחה), (בֶּת כּוֹהֵן)
-</HB>
+<HB> (בֶּת כּוֹהֵן קְרָבֶה), יַעָמְדֶה (שם) בֶּת (שם מישפחה), (בֶּת כּוֹהֵן). </HB>
+
 (Bet kohen k'rabeh) Ya-amdeh [name] bet [family members' name(s)], (bet kohen)
