--- a/docusaurus/blog/2025-02-18-modet-ani.mdx
+++ b/docusaurus/blog/2025-02-18-modet-ani.mdx
@@ -7,9 +7,17 @@ tags:
 ---
 
 {" "}
-<HB>
-  מודֶת אֲנִי לְפָנֶיךָ מֶלֶךְ חַי וְקַיָּם, שֶׁהֶחֱזַרְתָּ בִּי נִשְׁמָתִי
-  בְּחֶמְלָה, רַבָּה אֱמוּנָתֶךָ
-</HB>
+<HB> מודֶת אֲנִי לְפָנֶיךָ מֶלֶךְ חַי וְקַיָּם, שֶׁהֶחֱזַרְתָּ בִּי נִשְׁמָתִי בְּחֶמְלָה, רַבָּה אֱמוּנָתֶךָ: </HB>
 
 **Modet** ani l'fanecha, melech chai v'kayam, shechezarta bi nishmati, b'chemla, raba emunatecha
+
+<HB> בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, שֶׁעָשַׂנִי בֶּת חוֹרין </HB>
+
+Baruch Atah Adonai, Eloheinu melech ha-Olam, she-asani bet chorin
+
+
+<HB> *בָּרוּךְ אַתָּה ה' אֱלֹהֵינוּ מֶלֶךְ הָעוֹלָם, שֶׁעָשַׂנִי עִברִי </HB>
+
+Baruch Atah Adonai, Eloheinu melech ha-Olam, she-asani ivri
+
+*Using Ivri as the word in Hebrew for a trans person, according to the suggestions in Balancing on the Mechitza
