--- a/docusaurus/blog/2025-02-18-priestly-blessing-friday-night-childrens-blessing.mdx
+++ b/docusaurus/blog/2025-02-18-priestly-blessing-friday-night-childrens-blessing.mdx
@@ -7,15 +7,11 @@ tags:
 
 Friday night blessing for children:
 
-<HB> 
-יְשִׂימְךֶ אֱלהיִם כְּאָדַם וְשָׂרַה, רִבקָה וְיוֹסֵף
+<HB> יְשִׂימְךֶ אֱלהיִם כְּאָדַם וְשָׂרַה, רִבקָה וְיוֹסֵף </HB>
+<HB> יְבָרֶכְךֶ  וְיִשְׁמְרֶךֶ </HB>
+<HB> יָאֵר ײַ פָּנָיו  אֵלֶיךֶ וִיחֻנֶּךֶּ </HB>
+<HB> יִשָּׂא ײַ פָּנָיו אֵלֶיךֶ וְיָשֵׂם לְךֶ שָׁלוֹם </HB>
 
-יְבָרֶכְךֶ וְיִשְׁמְרֶךֶ
-
-יָאֵר ײַ פָּנָיו אֵלֶיךֶ וִיחֻנֶּךֶּ
-
-יִשָּׂא ײַ פָּנָיו אֵלֶיךֶ וְיָשֵׂם לְךֶ שָׁלוֹם
-</HB>
 
 Y'simche Elohim k'Adam v'Sarah, Rivkah v'Yosef
 
