--- a/docusaurus/blog/2025-02-18-friday-night-shabbat-blessings.mdx
+++ b/docusaurus/blog/2025-02-18-friday-night-shabbat-blessings.mdx
@@ -13,19 +13,25 @@ tags:
 
 [https://www.emilyjoygoldberg.com/genderexpansive-shabbat-prayers ](https://www.emilyjoygoldberg.com/genderexpansive-shabbat-prayers)
 
+### Blessing over the Candles
+
 <HB>  בְּרוּךֶ אָתֶה ײַ, אֱלֹהִימוֹתֵינוּ מַלְכֶּת הָעוֹלָם, אֲשֶׁר קִדְשֶׁנוּ בְּמִצְוֹתֶיהֶ וְצִוֶנוּ לְהַדְלִיק נֵר שֶׁל שַבָּת </HB>
 
 Bruche ateh (Adonai or Yah or HaShem or whatever people use) Elohimoteinu Malket ha’Olam asher kidshenu b’mitzvoteihe, v’tzivenu l’hadlik ner shel Shabbat.
 
+### Blessing over Wine
 <HB>  בְּרוּךֶ אָתֶה ײַ,  אֱלֹהִימוֹתֵינוּ מַלְכֶּת הָעוֹלָם, בּוֹרָאת פְּרִי הַגָּֽפֶן </HB>
 
 Bruche ateh (Adonai or Yah or HaShem or whatever people use) Elohimoteinu Malket ha’Olam, borat p’ri hagafen.
 
+
+### Blessing for washing hands
 <HB>  בְּרוּךֶ אָתֶה ײַ, אֱלֹהִימוֹתֵינוּ מַלְכֶּת הָעוֹלָם, אֲשֶׁר קִדְשֶׁנוּ בְּמִצְוֹתֶיהֶ וְצִוֶנוּ עַל נְטִילַת יָדַיִם </HB>
 
 Bruche ateh (Adonai or Yah or HaShem or whatever people use) Elohimoteinu Malket ha’Olamat yadayim
 asher kidshenu b’mitzvoteihe, v’tzivenu al nitilat yadaim.
 
+### Blessing over bread:
 <HB> בְּרוּךֶ אָתֶה ײַ, אֱלֹהִימוֹתֵינוּ מַלְכֶּת הָעוֹלָם, הַמּוֹצִיאֶה לֶחֶם מִן הָאָרֶץ </HB>
 
 Bruche ateh (Adonai or Yah or HaShem or whatever people use) Elohimoteinu Malket ha’Olam Hamotzi'e lechem min ha'aretz
