--- a/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
@@ -28,7 +28,7 @@ For other relatives:
 
 <HB> סָבֶּתִּי דּוׄדֶתִי אֲחֶתִי בֶּתִּי דּוׄדִי </HB>
 
-<HB> פלוני מבית פלוני) שֶׁהָלְכֶה לְעוֹלָמֶה בַּעֲבוּר שֶׁבְּלִי נֶדֶר אֶתֵּן צְדָקָה בַּעֲד הַנְשָׁמָה. בִּשְׂכַר זֶה תְּהֵא הַנֶפֶשׁ צְרוּרָה צְרוּרָה בִּצְרוֹר הַחַיִּים) </HB>
+<HB> (פלוני מבית פלוני) שֶׁהָלְכֶה לְעוֹלָמֶה בַּעֲבוּר שֶׁבְּלִי נֶדֶר אֶתֵּן צְדָקָה בַּעֲד הַנְשָׁמָה. בִּשְׂכַר זֶה תְּהֵא הַנֶפֶשׁ צְרוּרָה צְרוּרָה בִּצְרוֹר הַחַיִּים </HB>
 
 <HB> עִם נִשְׁמוֹת אַבְרָהָם יִצְחָק וְיַעֲקֹב שָׂרָה רִבְקָה רָחֵל וְלֵאָה </HB>
 
