--- a/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-yizkor-blessings.mdx
@@ -7,7 +7,7 @@ tags:
 ---
 Yizkor Blessings from David E Rendsburg
 
-For a parent:
+### For a parent:
 
 <HB> יִזְכּוֹר אֱלֹהִים נִשְׁמַת הוֹרֶתִי מוֹרֶתִי </HB>
 
@@ -22,7 +22,7 @@ For a parent:
 <HB> וְעִם שְׁאָר צַדִּיקִים וְצַדְקָנִיּוֹת שֶׁבְּגַן עֵדֶן וְנֹאמַר אָמֵן. </HB>
 
 
-For other relatives:
+### For other relatives:
 
 <HB> יִזְכּוֹר אֱלֹהִים נִשְׁמַת </HB>
 <HB> סָבֶּתִּי דּוׄדֶתִי אֲחֶתִי בֶּתִּי דּוׄדִי </HB>
@@ -30,7 +30,7 @@ For other relatives:
 <HB> עִם נִשְׁמוֹת אַבְרָהָם יִצְחָק וְיַעֲקֹב שָׂרָה רִבְקָה רָחֵל וְלֵאָה </HB>
 <HB> וְעִם שְׁאָר צַדִּיקִים וְצַדְקָנִיּוֹת שֶׁבְּגַן עֵדֶן וְנֹאמַר אָמֵן. </HB>
 
-Memorial Prayer:
+### Memorial Prayer:
 
 <HB> אֵל מָלֵא רַחֲמִים, שׁוֹכֵן בַּמְּרוֹמִים, הַמְצֵא מְנוּחָה נְכוֹנָה, עַל כַּנְפֵי הַשְּׁכִינָה, בְּמַעֲלוֹת קְדוֹשִׁים וּטְהוֹרִים, כְּזוֹהַר הָרָקִיעַ מַזְהִירִים, </HB>
 
