Update about us “index”

--- a/docusaurus/src/pages/about/index.mdx
+++ b/docusaurus/src/pages/about/index.mdx
@@ -21,7 +21,7 @@ Deep gratitude to Tal Klausner, Rabbi Jonah Rank, brin solomon, Rabbi Emily Aviv
   width="255"
   height="274"
 />
- (they/them/theirs) is a connector who applies their knowledge of ecology as a framework
+ Lior Gross (they/them/theirs) is a connector who applies their knowledge of ecology as a framework
 for justice through building critical community connections and fostering diversity
 for resilience through education.
 
@@ -31,7 +31,7 @@ for resilience through education.
   width="255"
   height="274"
 />
- (he/him/his) is an instructor in the Jewish Studies Program at the University of
+ Eyal Rivlin (he/him/his) is an instructor in the Jewish Studies Program at the University of
 Colorado Boulder, as well as a musician and love warrior. [Learn More about Eyal](https://www.colorado.edu/jewishstudies/faculty-and-staff/faculty/eyal-rivlin)
 
 ## How to Cite Us
@@ -57,33 +57,31 @@ to get in touch!
 
 ## In the News
 
-[![alt text](image.png)](https://www.jta.org/2018/11/19/life-religion/college-student-created-way-transgender-people-speak-hebrew)
+[![JTA: College Student Created New Way for Transgender People to Speak Hebrew](image.png)](https://www.jta.org/2018/11/19/life-religion/college-student-created-way-transgender-people-speak-hebrew)
 
-[![alt text](image-3.png)](https://www.timesofisrael.com/in-an-increasingly-nonbinary-world-is-gendered-hebrew-willing-to-adapt/)
+[![Times Of Israel: In an Increasingly Nonbinary World, Is Gendered Hebrew Willing to Adapt?](image-3.png)](https://www.timesofisrael.com/in-an-increasingly-nonbinary-world-is-gendered-hebrew-willing-to-adapt/)
 
-[![alt text](image-2.png)](https://www.haaretz.com/us-news/u-s-students-invent-new-hebrew-grammar-for-non-binary-speakers-1.6673572)
+[![Haaretz: US Students Invent New Hebrew Grammar for Nonbinary Speakers](image-2.png)](https://www.haaretz.com/us-news/u-s-students-invent-new-hebrew-grammar-for-non-binary-speakers-1.6673572)
 
-[![alt text](image-5.png)](https://www.westword.com/news/cu-boulder-student-and-professor-create-space-in-hebrew-for-non-binary-individuals-11062930)
+[![Westword: CU Boulder Student and Professor Create Space in Hebrew for Non-Binary Individuals](image-5.png)](https://www.westword.com/news/cu-boulder-student-and-professor-create-space-in-hebrew-for-non-binary-individuals-11062930)
 
-[![alt text](image-6.png)](https://altec.colorado.edu/sec/express/2018/12/09/nonbinary-hebrew)
+[![ALTEC CU Boulder: Nonbinary Hebrew](image-6.png)](https://altec.colorado.edu/sec/express/2018/12/09/nonbinary-hebrew)
 
-[![alt text](image-7.png)](https://www.boulderweekly.com/entertainment/the-walls-move-outwards/)
+[![Boulder Weekly: The Walls Move Outwards](image-7.png)](https://www.boulderweekly.com/entertainment/the-walls-move-outwards/)
 
-[![alt text](image-8.png)](https://www.colorado.edu/today/2018/12/12/student-constructs-gender-inclusive-hebrew-language-rules?fbclid=IwAR0alMpE7-h7Y-fkk8U5Ln9uGoc4XFVbrBhf4eaGGjqXBKUDSJDxjqL2tpU)
+[![CU Boulder Today: Student Constructs Gender Inclusive Hebrew Language Rules](image-8.png)](https://www.colorado.edu/today/2018/12/12/student-constructs-gender-inclusive-hebrew-language-rules)
 
-[![alt text](image-9.png)](https://forward.com/culture/417978/why-making-hebrew-nonbinary-is-so-crucial/)
+[![Forward: Why Making Hebrew Nonbinary is so Crucial](image-9.png)](https://forward.com/culture/417978/why-making-hebrew-nonbinary-is-so-crucial/)
 
-[![alt text](image-10.png)](https://www.them.us/story/queer-inclusive-judaism)
+[![Them: Queer Inclusive Judaism](image-10.png)](https://www.them.us/story/queer-inclusive-judaism)
 
-[![alt text](image-11.png)](https://forum.duolingo.com/comment/29759227/A-way-for-nonbinary-people-to-speak-Hebrew-in-the-first-person)
+[![Juedische Allgemeine: Hebraeisch Fuer Alle](image-12.png)](https://www.juedische-allgemeine.de/juedische-welt/hebraeisch-fuer-alle/)
 
-[![alt text](image-12.png)](https://www.juedische-allgemeine.de/juedische-welt/hebraeisch-fuer-alle/)
+[![New York Times: How about a Both Mitzvah](image-13.png)](https://www.nytimes.com/2019/03/27/style/gender-fluid-bar-bat-mitzvah.html)
 
-[![alt text](image-13.png)](https://www.nytimes.com/2019/03/27/style/gender-fluid-bar-bat-mitzvah.html)
+[![The Activist Hustle: Love, Gender Expression, and Being Mycelium](image-14.png)](https://anchor.fm/the-activist-hustle/episodes/Episode-3--Love--Gender-Expression--and-Being-Mycelium-e3cc85)
 
-[![alt text](image-14.png)](https://anchor.fm/the-activist-hustle/episodes/Episode-3--Love--Gender-Expression--and-Being-Mycelium-e3cc85)
-
-[![alt text](image-15.png)](https://blogs.brandeis.edu/freshideasfromhbi/ending-gendered-hebrew-expanding-jewish-identity/)
+[![Brandeis Blog: Ending Gendered Hebrew](image-15.png)](https://www.brandeis.edu/hbi/blog/2019/0729-ending.html)
 
 <iframe
   src="https://creators.spotify.com/pod/show/the-activist-hustle/embed/episodes/Episode-3--Love--Gender-Expression--and-Being-Mycelium-e3cc85/a-abaj1u"
@@ -101,4 +99,38 @@ to get in touch!
   scrolling="no"
 ></iframe>
 
-[![alt text](image-16.png)](https://www.tabletmag.com/sections/community/articles/outside-the-gender-binary)
+[The Wind Podcast: They/them](https://thewind.org/episodes/theythem)
+
+[How society is redefining gender](https://www.colorado.edu/today/2019/07/22/transcript-how-society-redefining-gender)
+
+[![Tablet Magazine: Outside the Gender Binary](image-16.png)](https://www.tabletmag.com/sections/community/articles/outside-the-gender-binary)
+
+[Reform Judaism: 7 Jewish endeavors make 5782 a Sweet New Year](https://reformjudaism.org/blog/7-jewish-endeavors-make-5782-sweet-new-year)
+
+[Reuters](https://www.reuters.com/graphics/GENDER-LANGUAGE/LGBT/mopanqoelva/)
+
+## Citations to our project
+
+[OpenSiddur: Siddur Masorti](https://opensiddur.org/compilations/liturgical/siddurim/weekday-siddur/siddur-masorti-2019/)
+
+[New York Times: The Gender Binary in Language Classes](
+https://www.nytimes.com/2021/09/01/crosswords/gender-language-nonbinary.html)
+
+[Reconstructing Judaism](https://evolve.reconstructingjudaism.org/pronouns/#disqus_thread)
+
+[Tablet Magazine: My Nonbinary Journey](https://www.tabletmag.com/sections/community/articles/my-nonbinary-journey)
+
+[Tribe12: Gender Diversity Is Divinely Jewish](https://tribe12.org/2021/05/17/gender-diversity-is-divinely-jewish/)
+
+[Everyday Jewish Mom: Gender Neutral Blessing the Children](https://everydayjewishmom.com/2021/06/08/blessing-the-children-gender-neutral/)
+
+[Washington Post: Guide - How gender-neutral language is developing around the world](https://www.washingtonpost.com/world/2019/12/15/guide-how-gender-neutral-language-is-developing-around-world/)
+
+[Ketubah.com](https://ketubah.com/introducing-non-binary-ketubah-texts/)
+
+[Equal Eyes: Gender neutral Hebrew is the latest move towards Queer Inclusive Judaism](https://equal-eyes.org/database/2019/3/2/gender-neutral-hebrew-is-the-latest-move-towards-queer-inclusive-judaism)
+
+[Wikipedia](
+https://en.wikipedia.org/wiki/Gender_neutrality_in_languages_with_grammatical_gender#Hebrew)
+
+[Queering Religious Heritage: Languages in the era of COVID19 and changes in LGBTQ Jewish language at home, abroad, and online](https://aftercovid.rice.edu/abstract-queering-religious-heritage-languages-in-the-era-of-covid-19-changes-in-lgbtq-jewish-language-at-home-abroad-and-online/)
