Update Grammar “alternatives-to-this-system”

--- a/docusaurus/docs/alternatives-to-this-system.mdx
+++ b/docusaurus/docs/alternatives-to-this-system.mdx
@@ -3,8 +3,10 @@ title: Alternatives to this system
 slug: alternatives
 sidebar_position: 0
 ---
-Check out brin solomon's work, such as Siddur Davar Ḥadash
+Check out brin solomon's work, such as [Siddur Davar Ḥadash](https://inclusivesiddur.com/siddur/sdh-html-siddur.html)
 
-Lashon Me'orevet is used in everyday Hebrew speech in Israel/Palestine, which involves deliberately mixing the grammatical genders of the words used for a single person in a single sentence.
+Lashon Me'orevet is used in everyday Hebrew speech in Israel/Palestine, which involves deliberately mixing the grammatical genders of the words used for a single person in a single sentence. Check out [Orit Bershtling's work](/img/
 
 Alternative plural endings have been proposed to -imot, such as -in, -on, and -ol .
+
+There is also [Multigender Hebrew](https://multigenderhebrew.com/) by Michal Shomer, who has created a font which allows for both grammatical genders to be read at once.
