Update Grammar “alternatives-to-this-system”

--- a/docusaurus/docs/alternatives-to-this-system.mdx
+++ b/docusaurus/docs/alternatives-to-this-system.mdx
@@ -5,7 +5,7 @@ sidebar_position: 0
 ---
 Check out brin solomon's work, such as [Siddur Davar Ḥadash](https://inclusivesiddur.com/siddur/sdh-html-siddur.html)
 
-Lashon Me'orevet is used in everyday Hebrew speech in Israel/Palestine, which involves deliberately mixing the grammatical genders of the words used for a single person in a single sentence. Check out [Orit Bershtling's work](/img/
+Lashon Me'orevet is used in everyday Hebrew speech in Israel/Palestine, which involves deliberately mixing the grammatical genders of the words used for a single person in a single sentence. Check out Orit Bershtling's work, [Speech Creates a Kind of Commitment](/img/Speech_Creates_a_Kind_of_Commitment)
 
 Alternative plural endings have been proposed to -imot, such as -in, -on, and -ol .
 
