--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -57,31 +57,31 @@ to get in touch!
 
 ## In the News
 
-[![JTA: College Student Created New Way for Transgender People to Speak Hebrew](image.png)](https://www.jta.org/2018/11/19/life-religion/college-student-created-way-transgender-people-speak-hebrew)
+[![JTA: College Student Created New Way for Transgender People to Speak Hebrew](about/image.png)](https://www.jta.org/2018/11/19/life-religion/college-student-created-way-transgender-people-speak-hebrew)
 
-[![Times Of Israel: In an Increasingly Nonbinary World, Is Gendered Hebrew Willing to Adapt?](image-3.png)](https://www.timesofisrael.com/in-an-increasingly-nonbinary-world-is-gendered-hebrew-willing-to-adapt/)
+[![Times Of Israel: In an Increasingly Nonbinary World, Is Gendered Hebrew Willing to Adapt?](about/image-3.png)](https://www.timesofisrael.com/in-an-increasingly-nonbinary-world-is-gendered-hebrew-willing-to-adapt/)
 
-[![Haaretz: US Students Invent New Hebrew Grammar for Nonbinary Speakers](image-2.png)](https://www.haaretz.com/us-news/u-s-students-invent-new-hebrew-grammar-for-non-binary-speakers-1.6673572)
+[![Haaretz: US Students Invent New Hebrew Grammar for Nonbinary Speakers](about/image-2.png)](https://www.haaretz.com/us-news/u-s-students-invent-new-hebrew-grammar-for-non-binary-speakers-1.6673572)
 
-[![Westword: CU Boulder Student and Professor Create Space in Hebrew for Non-Binary Individuals](image-5.png)](https://www.westword.com/news/cu-boulder-student-and-professor-create-space-in-hebrew-for-non-binary-individuals-11062930)
+[![Westword: CU Boulder Student and Professor Create Space in Hebrew for Non-Binary Individuals](about/image-5.png)](https://www.westword.com/news/cu-boulder-student-and-professor-create-space-in-hebrew-for-non-binary-individuals-11062930)
 
-[![ALTEC CU Boulder: Nonbinary Hebrew](image-6.png)](https://altec.colorado.edu/sec/express/2018/12/09/nonbinary-hebrew)
+[![ALTEC CU Boulder: Nonbinary Hebrew](about/image-6.png)](https://altec.colorado.edu/sec/express/2018/12/09/nonbinary-hebrew)
 
-[![Boulder Weekly: The Walls Move Outwards](image-7.png)](https://www.boulderweekly.com/entertainment/the-walls-move-outwards/)
+[![Boulder Weekly: The Walls Move Outwards](about/image-7.png)](https://www.boulderweekly.com/entertainment/the-walls-move-outwards/)
 
-[![CU Boulder Today: Student Constructs Gender Inclusive Hebrew Language Rules](image-8.png)](https://www.colorado.edu/today/2018/12/12/student-constructs-gender-inclusive-hebrew-language-rules)
+[![CU Boulder Today: Student Constructs Gender Inclusive Hebrew Language Rules](about/image-8.png)](https://www.colorado.edu/today/2018/12/12/student-constructs-gender-inclusive-hebrew-language-rules)
 
-[![Forward: Why Making Hebrew Nonbinary is so Crucial](image-9.png)](https://forward.com/culture/417978/why-making-hebrew-nonbinary-is-so-crucial/)
+[![Forward: Why Making Hebrew Nonbinary is so Crucial](about/image-9.png)](https://forward.com/culture/417978/why-making-hebrew-nonbinary-is-so-crucial/)
 
-[![Them: Queer Inclusive Judaism](image-10.png)](https://www.them.us/story/queer-inclusive-judaism)
+[![Them: Queer Inclusive Judaism](about/image-10.png)](https://www.them.us/story/queer-inclusive-judaism)
 
-[![Juedische Allgemeine: Hebraeisch Fuer Alle](image-12.png)](https://www.juedische-allgemeine.de/juedische-welt/hebraeisch-fuer-alle/)
+[![Juedische Allgemeine: Hebraeisch Fuer Alle](about/image-12.png)](https://www.juedische-allgemeine.de/juedische-welt/hebraeisch-fuer-alle/)
 
-[![New York Times: How about a Both Mitzvah](image-13.png)](https://www.nytimes.com/2019/03/27/style/gender-fluid-bar-bat-mitzvah.html)
+[![New York Times: How about a Both Mitzvah](about/image-13.png)](https://www.nytimes.com/2019/03/27/style/gender-fluid-bar-bat-mitzvah.html)
 
-[![The Activist Hustle: Love, Gender Expression, and Being Mycelium](image-14.png)](https://anchor.fm/the-activist-hustle/episodes/Episode-3--Love--Gender-Expression--and-Being-Mycelium-e3cc85)
+[![The Activist Hustle: Love, Gender Expression, and Being Mycelium](about/image-14.png)](https://anchor.fm/the-activist-hustle/episodes/Episode-3--Love--Gender-Expression--and-Being-Mycelium-e3cc85)
 
-[![Brandeis Blog: Ending Gendered Hebrew](image-15.png)](https://www.brandeis.edu/hbi/blog/2019/0729-ending.html)
+[![Brandeis Blog: Ending Gendered Hebrew](about/image-15.png)](https://www.brandeis.edu/hbi/blog/2019/0729-ending.html)
 
 <iframe
   src="https://creators.spotify.com/pod/show/the-activist-hustle/embed/episodes/Episode-3--Love--Gender-Expression--and-Being-Mycelium-e3cc85/a-abaj1u"
@@ -103,7 +103,7 @@ to get in touch!
 
 [How society is redefining gender](https://www.colorado.edu/today/2019/07/22/transcript-how-society-redefining-gender)
 
-[![Tablet Magazine: Outside the Gender Binary](image-16.png)](https://www.tabletmag.com/sections/community/articles/outside-the-gender-binary)
+[![Tablet Magazine: Outside the Gender Binary](about/image-16.png)](https://www.tabletmag.com/sections/community/articles/outside-the-gender-binary)
 
 [Reform Judaism: 7 Jewish endeavors make 5782 a Sweet New Year](https://reformjudaism.org/blog/7-jewish-endeavors-make-5782-sweet-new-year)
 
