add ugly contact form

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -55,6 +55,8 @@ Want to share something you've created?
 Please use the Contact Box below
 to get in touch!
 
+<ContactForm />
+
 ## In the News
 
 [![JTA: College Student Created New Way for Transgender People to Speak Hebrew](about/image.png)](https://www.jta.org/2018/11/19/life-religion/college-student-created-way-transgender-people-speak-hebrew)
