Update Applied Uses “2025-02-23-chanukah-blessings”

--- a/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
+++ b/docusaurus/blog/2025-02-23-chanukah-blessings.mdx
@@ -1,11 +1,15 @@
 ---
 title: Chanukah Blessings
 slug: chanukah-blessings
+pdf_file: /img/inclusive-chanukah-blessings.pdf
 tags:
   - Blessings:Chanukah
 ---
-
 Chanukah Blessings (conjugated by Kohenet Ahava Lilith EvershYne)
 
 Bruche ateh Shekhinah Elot'heinu Ruach haOlam asher kidshatnu bmitzvoteihe vetzivatnu l'hadlik ner shel Chanukah.
 Bruche ateh Shekhinah Elot'heinu Ruach haOlam, she-asteh nisim l’kodmeinu ba-yamim ha-heimen ba-z’man ha-zeh.
+
+
+
+[Chanukah Blessings by Maia Seven](https://docs.google.com/document/d/1I-1653DZ4m_pV_X84ik51fgoYjH5V7mi-FTLIiEcu0Q/edit?tab=t.0)
