--- a/docusaurus/docs/resources/multigender-hebrew-project.mdx
+++ b/docusaurus/docs/resources/multigender-hebrew-project.mdx
@@ -3,4 +3,4 @@ title: Multigender Hebrew Project
 slug: multigender-hebrew
 sidebar_position: 0
 ---
-https://multigenderhebrew.com/
+[Multigender Hebrew Project](https://multigenderhebrew.com/)
