Update Pages “about”

--- a/docusaurus/src/pages/about.mdx
+++ b/docusaurus/src/pages/about.mdx
@@ -11,7 +11,7 @@ We are building a bigger tent for nonbinary Jews through a third-gender grammar 
 This project is free, open-source, community-based, and grassroots.
 It lives and grows and changes with every single person who uses and adds to it.
 Thank you to all the amazing people who are enlivening this work through speaking it into ever-renewed becoming!
-Deep gratitude to Tal Klausner, Rabbi Jonah Rank, brin solomon, Rabbi Emily Aviva Kapor-Mater, Ze'evi Berman, and so many more.
+Deep gratitude to Tal Klausner, Rabbi Jonah Rank, brin solomon, Rabbi Emily Aviva Kapor-Mater, Ze'evi Tovlev, and so many more.
 
 ## Who We Are
 
