Update Applied Uses “2025-02-22-a-haggadah-of-our-own”

--- a/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
+++ b/docusaurus/blog/2025-02-22-a-haggadah-of-our-own.mdx
@@ -1,12 +1,14 @@
 ---
 title: A Haggadah Of Our Own
+slug: haggadah-of-our-own
 pdf_file: /img/a-haggadah-of-our-own.pdf
 additional_files:
   - /img/host-s-guide.pdf
   - /img/a-haggadah-of-our-own-for-voiceover-.epub
   - /img/a-haggadah-of-our-own.epub
   - /img/host-s-guide.epub
-slug: haggadah-of-our-own
+tags:
+  - Passover:Haggadah
 ---
 
 "A Haggadah Of Our Own" prepared by Thursday Bram:
