Update Applied Uses “2025-02-22-hineini-haggadah”

--- a/docusaurus/blog/2025-02-22-hineini-haggadah.mdx
+++ b/docusaurus/blog/2025-02-22-hineini-haggadah.mdx
@@ -1,7 +1,9 @@
 ---
 title: Hineini Haggadah
-pdf_file: /img/hineini-haggadah-2019_5779.pdf
 slug: hineini-haggadah
+pdf_file: /img/hineini-haggadah-2019_5779.pdf
+tags:
+  - Passover:Haggadah
 ---
 
 Kohenet Ahava Lilith evershYne's Hineni Haggadah, Pesach 5779
