Update Applied Uses “2025-02-27-blessings-before-haftarah”

--- a/docusaurus/blog/2025-02-27-blessings-before-haftarah.mdx
+++ b/docusaurus/blog/2025-02-27-blessings-before-haftarah.mdx
@@ -4,6 +4,9 @@ slug: blessings-haftarah
 pdf_file: /img/haftarah-blessing-nonbinary.pdf
 additional_files:
   - /img/nonbinary-blessing-before-the-haftarah.mp3
+tags:
+  - Shacharit
+  - Blessings
 ---
 Cantor Abbe Lyons
 <PdfViewer frontMatter={frontMatter} />
