--- a/docusaurus/docs/resources/2022-conference-gender-inclusive-and-nonbinary-hebrew-innovations-and-classroom-applications.mdx
+++ b/docusaurus/docs/resources/2022-conference-gender-inclusive-and-nonbinary-hebrew-innovations-and-classroom-applications.mdx
@@ -4,6 +4,6 @@ title: "2022 Conference: Gender-Inclusive and Nonbinary Hebrew: Innovations and
 slug: 2022-conference
 sidebar_position: 0
 ---
-`<iframe width="560" height="315" src="https://www.youtube.com/embed/rN-ZeEZAcLo?si=8fElrzdNiUbgIHuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>`
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rN-ZeEZAcLo?si=8fElrzdNiUbgIHuL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 https://www.youtube.com/watch?v=rN-ZeEZAcLo
