Update Resources “trans-and-jewish-today”

--- a/docusaurus/docs/resources/trans-and-jewish-today.mdx
+++ b/docusaurus/docs/resources/trans-and-jewish-today.mdx
@@ -1,6 +1,20 @@
 ---
-title: Trans and Jewish Today
-slug: trans-and-jewish-today
+title: Queer Jewish Resources
+slug: queer-jewish-resources
 sidebar_position: 1
 ---
+[Sephardi Mizrahi Queer Network](https://smqn.squarespace.com/)
 
+[Eshel](https://www.eshelonline.org/)
+
+[Keshet](https://www.keshetonline.org/)
+
+[JQY](https://jqy.org/)
+
+[SVARA](https://svara.org/)
+
+[Shel Maala](https://shelmaala.com/)
+
+[SOJOURN](https://sojourngsd.org/)
+
+[Kosher Queers Podcast](https://kosherqueers.gay/)
