Update Applied Uses “2025-02-20-bessarabian-extensions”

--- a/docusaurus/blog/2025-02-20-bessarabian-extensions.mdx
+++ b/docusaurus/blog/2025-02-20-bessarabian-extensions.mdx
@@ -6,6 +6,6 @@ slug: bessarabian-extensions
 pdf_file: /img/2020-09-04-nonbinary-hebrew-extensions.pdf
 tags: []
 ---
-[Besărobĭsh (Bessarabian) extensions by Binah bas P'ninah (she) PDF](/img/2020-09-04-nonbinary-hebrew-extensions.pdf)
+[Besărobĭsh (Bessarabian) extensions by Binah bas Sure (she) PDF](/img/2020-09-04-nonbinary-hebrew-extensions.pdf)
 
 <PdfViewer frontMatter={frontMatter} />
