Update Applied Uses “2025-02-23-lekhe-dodeti”

--- a/docusaurus/blog/2025-02-23-lekhe-dodeti.mdx
+++ b/docusaurus/blog/2025-02-23-lekhe-dodeti.mdx
@@ -4,6 +4,6 @@ slug: lekhe-dodeti
 pdf_file: /img/nonbinary-siddur-lekhe-dodeti.pdf
 ---
 brin solomon's Lekhe Dodeti
-(from their siddur in progress)
+(from their siddur Davar Ḥadash)
 
 <PdfViewer frontMatter={frontMatter} />
