--- a/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
+++ b/docusaurus/blog/2025-02-23-soulmate-blessing.mdx
@@ -1,11 +1,11 @@
 ---
 title: Soulmate Blessing
+slug: soulmate-blessing
 pdf_file: ""
 additional_files:
   - /img/soulmate-blessing.docx
-slug: soulmate-blessing
 ---
-Check out this beautiful soulmate blessing created by rabbinical student Ariel Zitny!
+Check out this beautiful soulmate blessing created by Rabbi Ariel Tovlev!
 
 <HB> בָּרוּךְ אַתָּה יְיָ אֱלֹהֵינוּ  מֶלֶךְ הָעוֹלָם אֲשֶׁר עָשָׂה אֶת יְדִידֶת נַפְשִׁי </HB>
 
