Update Grammar “nouns”

--- a/docusaurus/docs/grammar/nouns.mdx
+++ b/docusaurus/docs/grammar/nouns.mdx
@@ -1,7 +1,7 @@
 ---
-sidebar_position: 1
 title: Nouns
 slug: nouns
+sidebar_position: 1
 ---
 |Form|Hebrew example|Translation|
 |-----|------------|------------|
@@ -14,3 +14,5 @@ Alternate plural endings:
 talmidin
 
 talmidol
+
+achon
