--- a/docusaurus/blog/2025-02-23-maariv-chatimot.mdx
+++ b/docusaurus/blog/2025-02-23-maariv-chatimot.mdx
@@ -3,7 +3,7 @@ title: Maariv Chatimot
 slug: maariv-chatimot
 pdf_file: /img/maariv-chatimot-in-nonbinary-hebrew.docx.pdf
 ---
-Ze'evi Berman's Maariv Chatimot
+Ze'evi Tovlev's Maariv Chatimot
 and [Ze'evi leading these prayers at CBST 10/30/20](https://www.facebook.com/watch/live/?ref=watch_permalink&v=1249538312069071)
 
 <PdfViewer frontMatter={frontMatter} />
